# project_etl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
project/: api.py  contracts.py  generate_datas.py  main.py  pipeline.py  schemas.py  script_etl.py  settings.py
project/orm_alvo/: alembic.ini  models.py
project/orm_alvo/migrations/: env.py
project/orm_alvo/migrations/versions/: 1e33431cc42b_create_first_tables.py  60dc9aa821c8_modify_table_data_add_att_mean_min_max_.py  67c2165e8aaf_alter_table_data_include_primary_key_.py  c41bd0f8f22c_create_tables_signal_and_data.py
project/orm_fonte/: alembic.ini  models.py
project/orm_fonte/migrations/: env.py
project/orm_fonte/migrations/versions/: 0bbb72c69ab6_add_index_in_timestamp.py  84b53e673e8d_create_table_data.py  e8e67a028191_create_table_data.py
project/scripts/: generate_datas.py
project/stages/extract/: extract_datas_fonte.py
project/stages/load/: load_datas.py
project/stages/transform/: transform_datas.py
tests/: conftest.py  test_api.py
tests/stages/: test_extract_datas_fonte.py  test_load_datas.py  test_transform_datas.py
